Source/WebCore/rendering/RenderRubyRun.h
@@ -38,7 +38,7 @@ namespace WebCore {
 class RenderRubyBase;
 class RenderRubyText;
 
-// RenderRubyRun are 'inline-block/table' like objects,and wrap a single pairing of a ruby base with its ruby text(s).
+// RenderRubyRuns are 'inline-block/table' like objects, and wrap a single pairing of a ruby base with its ruby text(s).
 // See RenderRuby.h for further comments on the structure
 
 class RenderRubyRun final : public RenderBlockFlow {
